[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = 32.0
margin_right = -65.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 100.0
margin_top = 74.0
margin_right = 396.0
margin_bottom = 224.0
text = "Lista Completada"

[node name="ColorRect" type="ColorRect" parent="Button"]
margin_left = 10.0
margin_top = -60.0
margin_right = 288.0
margin_bottom = -12.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button"]
margin_left = 13.0
margin_top = -50.0
margin_right = 277.0
margin_bottom = -19.0

[node name="Button2" type="Button" parent="."]
margin_left = 108.0
margin_top = 332.0
margin_right = 404.0
margin_bottom = 482.0
text = "Dados do usuario"

[node name="ColorRect" type="ColorRect" parent="Button2"]
margin_left = 1.0
margin_top = -62.0
margin_right = 279.0
margin_bottom = -14.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button2"]
margin_left = 9.0
margin_top = -55.0
margin_right = 273.0
margin_bottom = -24.0

[node name="LineEdit" type="LineEdit" parent="Button2"]
margin_left = 33.0
margin_top = 167.0
margin_right = 247.0
margin_bottom = 191.0

[node name="Button3" type="Button" parent="."]
margin_left = 568.0
margin_top = 66.0
margin_right = 864.0
margin_bottom = 216.0
text = "Função que retorna texto"

[node name="ColorRect" type="ColorRect" parent="Button3"]
margin_left = 10.0
margin_top = -60.0
margin_right = 288.0
margin_bottom = -12.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button3"]
margin_left = 13.0
margin_top = -50.0
margin_right = 277.0
margin_bottom = -19.0

[node name="Button4" type="Button" parent="."]
margin_left = 571.0
margin_top = 335.0
margin_right = 867.0
margin_bottom = 485.0
text = "Valor inserido pelo usuario"

[node name="ColorRect" type="ColorRect" parent="Button4"]
margin_left = 10.0
margin_top = -60.0
margin_right = 288.0
margin_bottom = -12.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Button4"]
margin_left = 13.0
margin_top = -50.0
margin_right = 277.0
margin_bottom = -19.0

[node name="LineEdit1" type="LineEdit" parent="Button4"]
margin_left = 28.0
margin_top = 169.0
margin_right = 274.0
margin_bottom = 193.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
